--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,8 @@
         <meta property="twitter:image" content="{% if page.meta-image %}{{page.meta-image}}{% else %}{% if page.image %}{{page.image}}{% endif %}{% else %}/assets/hero.jpg{% endif %}">
 
         <!-- Favicon -->
-        <link href="/assets/favicon.png?v=2" rel="shortcut icon" type="image/x-icon">
-        <link href="/assets/webclip.png?v=2" rel="apple-touch-icon">
+        <link href="/assets/favicon.png" rel="shortcut icon" type="image/x-icon">
+        <link href="/assets/webclip.png" rel="apple-touch-icon">
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="/css/style.css" type="text/css"/>
