--- a/_layouts/nav-mobile.html
+++ b/_layouts/nav-mobile.html
@@ -3,11 +3,8 @@
     <head>
         {% include head.html %}
     </head>
-    <body lang="{{page.lang}}">     
-        {% include navbar.html %}
-        {{ content }}
-        {% include footer.html %}
-
+    <body lang="{{page.lang}}">
+        {% include nav-mobile.html %}
         <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     </body>
 </html>
