index progress grid links
the animation is jittery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         {% include head.html %}
     </head>
-    <body lang="{{page.lang}}" class="">     
+    <body lang="{{page.lang}}" class="debug">     
         {% include navbar.html %}
         {{ content }}
         {% include footer.html %}
