--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,9 @@
         <meta property="twitter:image" content="{% if page.meta-image %}{{page.meta-image}}{% else %}{% if page.image %}{{page.image}}{% endif %}{% else %}/assets/hero.jpg{% endif %}">
 
         <!-- Favicon -->
-        <!-- <link href="/assets/favicon.png" rel="shortcut icon" type="image/x-icon">
-        <link href="/assets/webclip.png" rel="apple-touch-icon"> -->
+        <link href="/favicon.svg?2" rel="icon" type="image/svg+xml">
+        <!-- <link href="/favicon.png" rel="shortcut icon" type="image/x-icon"> -->
+        <!-- <link href="/assets/webclip.png" rel="apple-touch-icon"> -->
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
