--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         {{ content }}
         {% include footer.html %}
 
+        <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('7d040c6311')"></script>
         <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     </body>
 </html>
