--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,17 +16,39 @@
                 <div class="f4 w-60-m w-40-l lh-copy o-80">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>    
                 <!-- CREDIT: Figar Ali https://codepen.io/figarali -->
                 <div id="app" class="mt5 flex flex-column items-center flex-row-l justify-between-l">
+                    <!-- <a href="https://beckher.com/en" target="_blank">
+                        <card class="mb6" data-image="https://theeta.nl/images/beckher-bg.jpg">
+                            <h2 slot="header" class="title">Beckher</h2>
+                            <p slot="content">Our own brand of small domestic appliances.</p>
+                        </card>
+                    </a> -->
+                    <!-- <card class="mb6" data-image="https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg">
+                        <h2 slot="header" class="title">Sanosil</h2>
+                        <p slot="content">Innovative, non-polluting disinfectant.</p>
+                    </card> -->
                     <card class="mb6" data-image="https://theeta.nl/images/beckher-bg.jpg">
-                        <h1 slot="header">Beckher</h1>
-                        <p slot="content">Our own brand of small domestic appliances.</p>
+                        <div slot="header" class="flex flex-column align-center mv0">
+                            <h2 class="title tc">Beckher</h2>
+                            <img class="" src="/assets/coffeemaker_mi-cm-1601b.png" alt="">
+                        </div>
+                        <p slot="content" class="mt2 tc">Our own brand of small domestic appliances.</p>
                     </card>
                     <card class="mb6" data-image="https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg">
-                        <h1 slot="header">Sanosil</h1>
-                        <p slot="content">Innovative, non-polluting disinfectant.</p>
+                        <div slot="header" class="flex flex-column align-center mv0">
+                            <h2 class="title tc">Sanosil</h2>
+                            <img class="" src="/assets/Sanosil-Super-25-Ag-5-kg.png" alt="">
+                        </div>
+                        <p slot="content" class="mt2 tc">Innovative, non-polluting disinfectant</p>
                     </card>
-                    <card class="mb6" data-image="https://theeta.nl/images/theeta-miravento-website-banner-2.jpg">
-                        <h1 slot="header">Miravento</h1>
-                        <p slot="content">Italian Moscato d’Asti, Rosé and Prosecco.</p>
+                    <card class="mb6" data-image="/assets/vineyards.jpg">
+                        <div slot="header" class="flex flex-column align-center mv0">
+                            <h2 class="title tc">Miravento</h2>
+                            <img class="" src="/assets/miravento-moscato-bottles.png" alt="">
+                            
+                        </div>
+                        <!-- <img slot="header" class="h5" src="/assets/miravento-moscato-bottles.png" alt=""> -->
+                        <!-- <h1 slot="header">Miravento</h1> -->
+                        <p slot="content" class="mt2 tc">Italian Moscato d’Asti, Rosé and Prosecco.</p>
                     </card>
                 </div>
             </section>
@@ -81,19 +103,14 @@
             {%- endfor -%}   
         </section>
         
-        <section class="grid-container pt0">
-            <div class="grid-item grow pa5 tc">
-                <h3 class="label o-70">Static</h3>
-                <div class="f1 lh-solid serif mb4">Example</div>
-                <p class="lh-title o-80 f4">
-                    The animation here works, but not when it’s a link
-                </p>
-            </div>
+        <section class="grid-container-2x2r pt0">
 
             {% for grid-link in site.data.index[page.lang].grid-links %}
-            <a href="{{grid-link.url}}" class="link grid-item ">
+            <a href="{{grid-link.url}}" class="no-underline grid-item-2x2 ">
                 <div class="grow pa5 tc flex flex-column justify-center h-100">
-                    <h3 class="label o-60">{{grid-link.label}}</h3>
+                    <h3 class="label o-60 flex items-center justify-center">{{grid-link.label}}
+                        <svg class="dib-hover white-50 ml2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg>
+                    </h3>
                     <div class="f1 lh-solid serif mb3">{{grid-link.title}}</div>
                     <p class="lh-title o-70 f4">
                         {{grid-link.text}}
@@ -109,6 +126,7 @@
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js'></script>
         <script src="/script.js"></script>
 
+        <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('7d040c6311')"></script>
         <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     </body>
 </html>
