--- a/_layouts/nav-mobile.html
+++ b/_layouts/nav-mobile.html
@@ -3,7 +3,7 @@
     <head>
         {% include head.html %}
     </head>
-    <body lang="{{page.lang}}">
+    <body lang="{{page.lang}}" id="hero" class="bg-hero">
 
         <div class="pa3 flex flex-column">
 
@@ -19,30 +19,30 @@
             <!-- navlinks.yml -->
 
             <div class="mt3 pv3">
-                <a href="/en{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr3 {% if page.lang == 'en' %}black b{% else %}silver{% endif %}">English</a>
-                <a href="/nl{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr3 {% if page.lang == 'nl' %}black b{% else %}silver{% endif %}">Nederlands</a>
-                <a href="/el{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim {% if page.lang == 'el' %}black b{% else %}silver{% endif %}">Ελληνικά</a>
+                <a href="/en{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr3 {% if page.lang == 'en' %}bb bw1 bb bw1 b{% endif %}">English</a>
+                <a href="/nl{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr3 {% if page.lang == 'nl' %}bb bw1 b{% endif %}">Nederlands</a>
+                <a href="/el{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim {% if page.lang == 'el' %}bb bw1 b{% endif %}">Ελληνικά</a>
             </div>
 
-            <h2 class="f5 label mt4 mb1">Brands</h2>
+            <h2 class="f5 label mt4 mb1 o-80">Brands</h2>
             {% for brand in site.data.navlinks[page.lang].brands %}
             <a class="f3 serif link dim dib pv2 black" href="/{{page.lang}}/{{brand.url}}/">{{brand.title}}
             </a>
             {% endfor %}
 
-            <h2 class="f5 label mt4 mb2">Company</h2>
+            <h2 class="f5 label mt4 mb2 o-80">Company</h2>
             {% for navlink in site.data.navlinks[page.lang].navlinks %}
                 <a class="navlinks link dim dib pv2" href="/{{page.lang}}/{{navlink.url}}/">{{navlink.title}}
                 </a>
             {% endfor %}
 
-            <h2 class="f5 label mt4 mb2">Contact</h2>
+            <h2 class="f5 label mt4 mb2 o-80">Contact</h2>
                 <a class="navlinks link dim dib pv2" href="mailto:info@theeta.nl">info@theeta.nl</a>
                 <a class="navlinks link dim dib pv2" href="https://www.linkedin.com/company/74165055">LinkedIn</a>
         </div>
 
 
-
+        <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('7d040c6311')"></script>
         <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     </body>
 </html>
