--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1060,8 +1060,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .white-90 { color: rgba( 255, 255, 255, .9 ); }
 .white-80 { color: rgba( 255, 255, 255, .8 ); }
 .white-70 { color: rgba( 255, 255, 255, .7 ); }
-.white-60 { color: rgba( 255, 255, 255, .6 ); }
-.white-50 { color: rgba( 255, 255, 255, .5 ); }
+.white-60 { color: rgba( 255, 255, 255, .6 ); fill: rgba( 255, 255, 255, .6 ); }
+.white-50 { color: rgba( 255, 255, 255, .5 ); fill: rgba( 255, 255, 255, .5 ); }
 .white-40 { color: rgba( 255, 255, 255, .4 ); }
 .white-30 { color: rgba( 255, 255, 255, .3 ); }
 .white-20 { color: rgba( 255, 255, 255, .2 ); }
