brands framework start

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,8 +33,7 @@
                 <div class="o-50 link">{{site.data.footer[page.lang].credits | markdownify}}</div>
             </div>
             <div class="w-100 w-50-l o-40">
-                <div>Privacy Notice: We use <a target="_blank" href="https://volument.com/privacy/">privacy-friendly analytics</a> to collect anonymous data, like number of visitors. Opt out by blocking third party cookies from your browser’s settongs</div>
-                
+                <div>{{site.data.footer[page.lang].footnote | markdownify}}</div>
             </div>
         </div>
     </footer>
