--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
         <!-- <a class="navlinks link dim dib" href="/contact.html">Contact</a> -->
             <div class="navlinks f6 dib">
             <a title="Switch to English" href="/en{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr2 {% if page.lang == 'en' %}black b{% else %}silver{% endif %}">EN</a>
-            <a title="Switch to Dutch" href="/el{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr2 {% if page.lang == 'nl' %}black b{% else %}silver{% endif %}">NL</a>
+            <a title="Switch to Dutch" href="/nl{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim mr2 {% if page.lang == 'nl' %}black b{% else %}silver{% endif %}">NL</a>
             <a title="Switch to Greek" href="/el{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="link dim {% if page.lang == 'el' %}black b{% else %}silver{% endif %}">ΕΛ</a>
             <!-- <a href="/bg{% if page.collection %}/{{page.category}}{% endif %}/{{page.ref}}" class="dim mr1 {% if page.lang == 'bg' %}black b{% else %}silver{% endif %}">БГ</a> -->
             </div>
